--- a/CybillTek/build.gradle
+++ b/CybillTek/build.gradle
@@ -1,5 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+buildscript {
+    ext.kotlin_version = "1.5.21"
+    ext.hilt_version = "2.37"
+    ext.nav_version = "2.3.5"
+
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:7.0.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
